<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="home_txt_name">이름 : </string>
    <string name="home_txt_mbti">MBTI : </string>

    <string name="main_id_error">아이디가 잘못되었습니다</string>
    <string name="main_pw_error">패스워드가 잘못되었습니다</string>
    <string name="main_login_success">로그인에 성공했습니다</string>

    <string name="repo_name">Repo Name</string>
    <string name="repo_author">Repo Author</string>
    <string name="info_message">Under Development</string>

    <string name="signup_finish">회원가입 완료</string>
    <string name="signup_btn">회원가입</string>

    <string name="hint_name">이름</string>
    <string name="hint_pw">비밀번호</string>
    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_email">이메일</string>

    <string name="name">이름</string>
    <string name="pw">비밀번호</string>
    <string name="id">ID</string>
    <string name="email">EMAIL</string>

    <string name="main_title">SOPT 31th</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="gallery">GALLERY</string>
    <string name="title">Title</string>

    <string name="signup_email_error">이메일 형식이 올바르지 않습니다.</string>
    <string name="signup_pw_error">비밀번호 형식이 올바르지 않습니다.</string>
    <string name="login_error">아이디, 비밀번호를 다시 확인해주세요!</string>
    <string name="signup_error">회원가입이 불가합니다</string>
    <string name="network_error">네트워크 에러</string>
    <string name="unexpected_error">예상치 못한 오류가 발생했습니다.</string>

    <string name="gallery_first_name">first_name</string>
    <string name="gallery_email">email_address</string>

    <string name="home_title">이용자 목록</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>