<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".presentation.login.LoginActivity">

        <TextView
            android:id="@+id/txt_signup"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:text="@string/main_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/hint_id"
            android:id="@+id/et_email"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_signup"
            tools:layout_editor_absoluteX="40dp" />

        <EditText
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/hint_pw"
            android:id="@+id/et_pw"
            android:inputType="textPassword"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            tools:layout_editor_absoluteX="40dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pw" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_width="0dp"
            android:orientation="horizontal"
            app:constraint_referenced_ids="btn_login, btn_signup"
            app:flow_horizontalGap="12dp"
            app:flow_horizontalStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pw" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
